POLİNOM2/polinombol.jj
/*
tümce -> bölünen / bölen
bölünen -> polinom
bölen -> polinom
polinom -> say? X ^ say? ( "+" say? X ^ say?)+


E  -> T E'
E' -> + T E'
E' ->
T  -> num P
P  -> x S
P  ->
S  -> ^2
S  ->
*/

options { 
    STATIC = true; //ayr??t?r?c?n?n metotlar? statik olur
	LOOKAHEAD = 1;
}

PARSER_BEGIN( Pol )
public class Pol{
}
PARSER_END( Pol )

SKIP : { " " | "\t" | "\n" | "\r" | "\r\n" }

TOKEN :
{
	  <BOLME : "/" | ";" >
	| <US : "^" >
	| <TOPLAM : "+" >
	| <SAYI : (["0"-"9"])+ ("." (["0"-"9"])+)? >
	| <X : "x" | "X" >
}


Tumce basla () : 
{
 Tumce t ; Bolunen blnn ; Bolen bln ; 
}
{
	blnn = bolunen() <BOLME> bln = bolen() { t = new Tumce(blnn,bln); } 
	{ return t; }
}


Bolunen bolunen() : { Bolunen blnn ; double s1,s2 ;}
{
	s1 = sayi() <X>  <US>  s2 = sayi() { blnn = new Bolunen(s1,s2); } 
		( <TOPLAM> s1 = sayi() <X> <US>  s2 = sayi() { blnn.eval(s1,s2); })*
	{ return blnn; }
}

Bolen bolen() : { Bolen bln ; double s1,s2 ;}
{
	s1 = sayi() <X> <US>  s2 = sayi() { bln = new Bolen(s1,s2); } 
		( <TOPLAM> s1 = sayi() <X> <US>  s2 = sayi() { bln.eval(s1,s2); })*
	{ return bln; }
}


double sayi() : { Token t; }
{
	 t = <SAYI> {return  Double.parseDouble(t.image); }
}
